[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Pod and Node definitions for rk8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/common"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
libcni = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
quinn = { workspace = true }
ipnetwork = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
libvault = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
etcd-client = { workspace = true }