[package]
name = "dagrs"
authors = [
    "Quanyi Ma <eli@patch.sh>",
    "Xiaolong Fu <njufxl@gmail.com>",
    "Zhilei Qiu <qzl2503687@gmail.com>",
]
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Dagrs follows the concept of Flow-based Programming and is suitable for the execution of multiple tasks with graph-like dependencies. Dagrs has the characteristics of high performance and asynchronous execution. It provides users with a convenient programming interface."
readme = "README.md"
repository = "https://github.com/dagrs-dev/dagrs"
keywords = ["DAG", "task", "async", "fbp", "tokio"]

[dependencies]
dagrs-derive = {workspace = true}
tokio = { workspace = true , features = ["rt", "sync", "rt-multi-thread", "time"] }
log = {workspace = true}
async-trait = {workspace = true}
futures = {workspace = true}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.11.6"

[target.'cfg(unix)'.dev-dependencies]

[features]
default = ["derive"]
derive = ["dagrs-derive/derive"]

[[example]]
name = "auto_node"
required-features = ["derive"]

[[example]]
name = "auto_relay"
required-features = ["derive"]

[[example]]
name = "compute_dag"

[[example]]
name = "custom_node"

[[example]]
name = "hello_dagrs"
