[package]
name = "distribution"
version = "0.1.1"
edition = "2024"
authors = ["rk8s-dev team"]
description = "A lite implementation of the OCI Distribution Spec in Rust"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/distribution"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
bcrypt = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
oci-spec = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate", "chrono", "uuid"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "fmt"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { workspace = true, features = ["json"] }
rand = { workspace = true }

[dev-dependencies]
qlean = { workspace = true }
