[package]
name = "libbridge"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "CNI Plugin Bridge Network Configuration"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libbridge"

[dependencies]
libcni = { workspace = true }
libnetwork = { workspace = true }
iptables = { workspace = true }
cni-plugin = { workspace = true, features = ["with-smol"] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
macaddr = { workspace = true }
netlink-packet-route = { workspace = true }
rtnetlink = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
async-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
ipnetwork = { workspace = true }