[package]
name = "libcgroups"
version = "0.5.3"
description = "Library for cgroup"
license = "Apache-2.0"
repository = "https://github.com/containers/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2021"
rust-version = "1.58.1"
autoexamples = true
keywords = ["youki", "container", "cgroups"]

[features]
default = ["v1", "v2", "systemd"]
v1 = []
v2 = []
systemd = ["v2", "nix/socket", "nix/uio"]
cgroupsv2_devices = ["rbpf", "libbpf-sys", "errno", "libc", "nix/dir"]

[dependencies]
libnetwork = { workspace = true }
nix = { workspace = true, features = ["signal", "user", "fs"] }
procfs = { workspace = true }
oci-spec = { workspace = true, features = ["runtime"] }
fixedbitset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rbpf = { workspace = true, optional = true }
libbpf-sys = { workspace = true, optional = true }
errno = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
anyhow = { workspace = true }
oci-spec = { workspace = true, features = ["proptests", "runtime"] }
quickcheck = "1"
mockall = "0.13.1"
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
env_logger = { workspace = true }
serial_test = "3.1.1"
tempfile = { workspace = true }