[package]
name = "libcni"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "A Library For CNI-Plugins"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libcni"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
cni-plugin = { workspace = true }
futures = { workspace = true }
macaddr = { workspace = true }
netlink-packet-route = { workspace = true }
rtnetlink = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true, features = ["kv_unstable"] }
nix = { workspace = true }
rand = { workspace = true }
ipnetwork = { workspace = true }
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
typetag = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
json = { workspace = true }
once_cell = { workspace = true }