[package]
name = "libcontainer"
version = "0.5.3"
description = "Library for container control"
license = "Apache-2.0"
repository = "https://github.com/containers/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2021"
rust-version = "1.63.0"
keywords = ["youki", "container", "cgroups"]

[features]
default = ["systemd", "v2", "v1", "libseccomp"]
libseccomp = ["dep:libseccomp"]
systemd = ["libcgroups/systemd", "v2"]
v2 = ["libcgroups/v2"]
v1 = ["libcgroups/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices"]

[dependencies]
caps = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
fastrand = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["socket", "sched", "mount", "mman", "resource", "dir", "term", "hostname"] }
oci-spec = { workspace = true, features = ["runtime"] }
once_cell = { workspace = true }
procfs = { workspace = true }
prctl = { workspace = true }
libcgroups = { workspace = true, default-features = false }
libseccomp = { version = "0.3.0", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rust-criu = { workspace = true }
regex = { workspace = true, features = ["std", "unicode-perl"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
safe-path = { workspace = true }
nc = { workspace = true }

[dev-dependencies]
oci-spec = { workspace = true, features = ["proptests", "runtime"] }
quickcheck = "1"
serial_test = "3.1.1"
tempfile = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
scopeguard = "1.2.0"