[package]
name = "libcsi"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "CSI (Container Storage Interface) trait definitions and types for RK8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libcsi"

[lib]
name = "libcsi"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging / tracing
tracing = { workspace = true }

# Unique identifiers
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
