[package]
name = "libfuse-fs"
version = "0.1.9"
edition = "2024"
description = "FUSE Filesystem Library"
homepage = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
documentation = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
license = "MIT OR Apache-2.0"
exclude = ["buck"]

[dependencies]
uuid = { workspace = true, features = ["v4"] }
clap = { workspace = true, features = ["derive"] }
rfuse3 = { workspace = true, features = ["tokio-runtime", "unprivileged"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
radix_trie = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
vm-memory = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
vmm-sys-util = { workspace = true }
bitflags = { workspace = true }
nix = { workspace = true }
moka = { workspace = true, features = ["future"] }
memmap2 = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
