[package]
name = "libfuse-fs"
version = "0.1.13"
edition = "2024"
description = "FUSE Filesystem Library"
homepage = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
documentation = "https://github.com/r2cn-dev/rk8s/tree/main/project/libfuse-fs"
license = "MIT OR Apache-2.0"
exclude = ["buck"]

[dependencies]
uuid = { workspace = true, features = ["v4"] }
clap = { workspace = true, features = ["derive"] }
rfuse3 = { workspace = true, features = ["file-lock", "tokio-runtime", "unprivileged"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
radix_trie = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
vm-memory = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
vmm-sys-util = { workspace = true }
bitflags = { workspace = true }
nix = { workspace = true }
moka = { workspace = true, features = ["future"] }
memmap2 = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }

# macOS lazy-fd cache uses an LRU to bound the number of cached backing fds
# (see `LazyFdLru` in passthrough/mod.rs). Linux uses `O_PATH` so it does not
# need this. Gated to keep Linux dependency footprint unchanged.
[target.'cfg(target_os = "macos")'.dependencies]
lru = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

# qlean spins up a Linux VM (transitively pulls kvm-ioctls), which doesn't
# build on macOS. Gate it so example/test builds work on darwin hosts.
[target.'cfg(target_os = "linux")'.dev-dependencies]
qlean = "0.2"
