[package]
name = "libipam"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "CNI Plugin IPAM"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libipam"

[dependencies]
tokio = { workspace = true, features = ["full"] }
nix = { workspace = true, features = ["fs"] }
cni-plugin = { workspace = true }
ipnetwork = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
async-std = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }