[package]
name = "libnetwork"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "CNI Plugin Bridge Network Configuration"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libbridge"

[dependencies]
common = { path = "../common" }
libcni = { path = "../libcni" }
cni-plugin = { version = "0.2.1", features = ["with-smol"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "full"] }
futures = "0.3.31"
anyhow = "1.0.98"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ipnetwork = "0.17"
regex = "1.0"
lazy_static = "1.4"
netlink-packet-route = "0.22.0"
[dev-dependencies]
tempfile = "3"