[package]
name = "libnetwork"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "CNI Plugin Bridge Network Configuration"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libbridge"

[dependencies]
common = { workspace = true }
libcni = { workspace = true }
cni-plugin = { workspace = true, features = ["with-smol"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "full"] }
futures = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ipnetwork = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
netlink-packet-route = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }