[package]
name = "libruntime"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Common runtime logic for rk8s"

[dependencies]
common = { workspace = true }
libnetwork = { workspace = true }
libipam = { workspace = true }
libcgroups = { workspace = true }
libcontainer = { workspace = true }
libvault = { workspace = true }
libcni = { workspace = true }
libfuse-fs = { workspace = true }
liboci-cli = { workspace = true }
oci-spec = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
nix = { workspace = true, features = ["fs", "mount", "sched", "user", "process"] }
tar = { workspace = true }
flate2 = { workspace = true }
sha256 = { workspace = true }
gethostname = { workspace = true }
sysinfo = { workspace = true }
ipnetwork = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
dotenvy = { workspace = true }
netlink-packet-route = { workspace = true }
json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
cni-plugin = { workspace = true }
derive_more = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
walkdir = { workspace = true }
hickory-server = { version = "0.25.2", features=["resolver"] }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-client = { workspace = true }
tabwriter = { workspace = true }
chrono = { workspace = true }
protobuf = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic =  "0.13"
tonic-build = "0.13"
prost-build = { workspace = true }
bincode = { workspace = true }
quinn = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
