[package]
name = "libvault"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "the libvault is modified from RustyVault"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/libvault"
documentation = "https://docs.rs/rusty_vault/latest/rusty_vault/"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0" }
thiserror = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive", "rc", "alloc"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_bytes = "0.11"
serde_yaml = "0.9"
go-defer = "^0.1"
rand = "^0.8"
derivative = "2.2.0"
enum-map = "2.6.1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
radix_trie = "0.2.1"
lazy_static = "1.4.0"
regex = "1.11"
hcl-rs = "0.18"
log = "0.4"
hex = "0.4"
humantime = "2.1"
as-any = "0.3.1"
pem = "3.0"
chrono = "0.4"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
bcrypt = "0.15"
url = "2.5"
ureq = { version = "2.10", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.16" }
rustls-pemfile = "2.1"
webpki-roots = { version = "0.26", default-features = true }
glob = "0.3"
base64 = "0.22"
ipnetwork = "0.20"
blake2b_simd = "1.0"
derive_more = "0.99.17"
dashmap = "6.1"
better_default = "1.0.5"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
stretto = "0.8"
priority-queue = "2.1"
crossbeam-channel = "0.5"
lockfile = "0.4.0"
arc-swap = "1"
blake3 = "1.8"

itertools = "0.14.0"
etcd-client = { version = "0.16.1", features = ["tls"] }
tracing = "0.1.41"
builder-pattern = "0.4.2"
x509-parser = "0.18.0"
rustls-webpki = "0.103.7"

tonic = { version = "0.13.1", features = ["_tls-any"] }

# optional dependencies removed; keep openssl as required dependency for crypto modules.
openssl = { version = "0.10.73", optional = true }
openssl-sys = { version = "0.9.109", optional = true }

[build-dependencies]
toml = "0.8.19"

[features]
default = ["crypto_adaptor_openssl"]
crypto_adaptor_openssl = ["dep:openssl", "dep:openssl-sys"]
crypto_adaptor_tongsuo = ["dep:openssl", "dep:openssl-sys"]

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dependencies.foreign-types]
version = "0.3.1"

[dependencies.libc]
version = "0.2"

[lints.clippy]
result_large_err = "allow"
ptr_arg = "allow"
let_and_return = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
await_holding_lock = "allow"
too_many_arguments = "allow"
unnecessary_unwrap = "allow"
collapsible_match = "allow"
large_enum_variant = "allow"
unnecessary_map_or = "allow"
