[package]
name = "rkb"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Image builder for rk8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/rkb"

[dependencies]
libfuse-fs = { workspace = true }
rfuse3 = { workspace = true, features = ["tokio-runtime", "unprivileged"] }
clap = { workspace = true, features = ["derive"] }
nix = { workspace = true, features = ["fs", "process", "user", "sched", "mount"] }
tokio = { workspace = true, features = ["full"] }
libc = { workspace = true }
dockerfile-parser = { workspace = true }
anyhow = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true, features = ["zlib-rs"], default-features = false }
walkdir = { workspace = true }
sha2 = { workspace = true }
oci-spec = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
once_cell = { workspace = true }
dirs = { workspace = true }
oci-client = { workspace = true }
indicatif = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ipc-channel = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
axum = { workspace = true }
confy = { workspace = true }
comfy-table = { workspace = true }
qrcode = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
iterator-ext = { workspace = true }
tempfile = { workspace = true }
uzers = { workspace = true }
rayon = { workspace = true }
