[package]
name = "rkb"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Image builder for rk8s"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/rkb"

[dependencies]
common = { workspace = true }
libnetwork = { workspace = true }
libipam = { workspace = true }
libcgroups = { workspace = true }
libcontainer = { workspace = true }
libruntime = { workspace = true }
libvault = { workspace = true }
libcni = { workspace = true }
liboci-cli = { workspace = true }
libfuse-fs = { workspace = true }
rfuse3 = { workspace = true, features = ["tokio-runtime", "unprivileged"] }
clap = { workspace = true, features = ["derive", "env"] }
nix = { workspace = true, features = ["fs", "process", "user", "sched", "mount"] }
tokio = { workspace = true, features = ["full"] }
libc = { workspace = true }
dockerfile-parser = { workspace = true }
anyhow = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true, features = ["zlib-rs"], default-features = false }
walkdir = { workspace = true }
sha2 = { workspace = true }
sha256 = { workspace = true }
oci-spec = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
once_cell = { workspace = true }
dirs = { workspace = true }
oci-client = { workspace = true }
indicatif = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ipc-channel = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
axum = { workspace = true }
confy = { workspace = true }
comfy-table = { workspace = true }
qrcode = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
iterator-ext = { workspace = true }
tempfile = { workspace = true }
uzers = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serial_test = { workspace = true }
tabwriter = { workspace = true }
bincode = { workspace = true }
gethostname = { workspace = true }
sysinfo = { workspace = true }
ipnetwork = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
dotenvy = { workspace = true }
json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
cni-plugin = { workspace = true }
netlink-packet-route = { workspace = true }
hickory-server = { version = "0.25.2", features=["resolver"] }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-client = { workspace = true }
