[package]
name = "rkl"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "Implementation of CRI interface functionality based on Youki"
repository = "https://github.com/r2cn-dev/rk8s/tree/main/project/rkl"

[lib]
name = "rkl"
path = "src/lib.rs"

[[bin]]
name = "rkl"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
libnetwork = { path = "../libnetwork", version = "0.1.0" }
rkb = { path = "../rkb", version = "0.1.0" }
libipam = { path = "../libipam" }
libcgroups = { path = "../libcgroups", version = "0.5.1" }
libcontainer = { path = "../libcontainer", version = "0.5.1" }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
nix = { version = "0.29.0", features = ["fs", "mount"] }
libcni = { path = "../libcni" }
libfuse-fs = { path = "../libfuse-fs" }
anyhow = "1.0.98"
protobuf = "=3.2.0"
liboci-cli = "0.5.1"
tracing-journald = "0.3.1"
serde_json = "1.0"
tonic = "0.13"
prost = "0.13.5"
serde_yaml = "0.9"
prost-types = "0.12.6"
http-body = "0.4.5"
hyper = "0.14.27"
serial_test = "3.2.0"
oci-spec = "0.8.0"
tar = "0.4.44"
flate2 = "1.1.1"
sha256 = "1.6.0"
futures = "0.3.31"
daemonize = "0.5.0"
axum = "0.8.4"
chrono = "0.4"
tabwriter = "1.4.1"
bincode = "1.3"
quinn = { version = "0.11.8" }
rustls = "0.23"
gethostname = "0.4"
sysinfo = "0.30"
ipnetwork = "0.17"
log = "0.4"
lazy_static = "1.4"
regex = "1.0"
dotenvy = "0.15"
netlink-packet-route = "0.22.0"
json= "0.12.4"
thiserror = "2.0.16"
libvault = { path = "../libvault" }
derive_more = { version = "2.0.1", features = ["deref"] }
rustls-pemfile = "2.2.0"
hex = "0.4.3"
rand = "0.9.2"
cni-plugin = "0.2.1"

[dev-dependencies]
tempfile = "3"
scopeguard = "1.2.0"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13.5"
